--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Escola Municipal Ignácio de Andrade Melo</h1>
-    <h2>Votação para Representante de Turma</h2>
+    <h2>Votação para Representante da Turma</h2>
     <div class="container">
         <p>Escolha seu candidato:</p>
         <form id="voteForm">
