--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Escola Municipal Ignácio de Andrade Melo</h1>
-    <h2>Votação para Representante da Turma</h2>
+    <h2>Votação para Representante de Turma</h2>
     <div class="container">
         <p>Escolha seu candidato:</p>
         <form id="voteForm">
@@ -16,6 +16,7 @@
             <button type="button" onclick="confirmVote()">✅ Confirmar Voto</button>
         </form>
         <button type="button" onclick="showWinner()">🏆 Mostrar Resultado</button>
+        <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
         <div id="resultados">
             <h3>Resultados:</h3>
             <ul id="listaResultados" style="list-style: none; padding: 0;"></ul>
@@ -30,4 +31,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
