--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </form>
         <button type="button" onclick="showWinner()">🏆 Mostrar Resultado</button>
         <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
+        <button type="button" onclick="resetVote()">🔄 Reiniciar Votação</button>
         <div id="resultados">
             <h3>Resultados:</h3>
             <ul id="listaResultados" style="list-style: none; padding: 0;"></ul>
