--- a/resultado.html
+++ b/resultado.html
@@ -8,68 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>🎉 Resultado da Votação 🎉</h1>
+    <h1>Resultado da Votação</h1>
     <div id="vencedor"></div>
-    <canvas id="graficoVotos"></canvas>
-    <div class="fireworks" id="fireworks"></div>
-
-    <audio id="victoryMusic" src="https://cdn.pixabay.com/audio/2022/03/31/audio_a1ba4bb4aa.mp3" preload="auto"></audio>
-
-    <script>
-        const vencedor = JSON.parse(localStorage.getItem('vencedor')) || [];
-        const votos = JSON.parse(localStorage.getItem('votos')) || {};
-        const vencedorDiv = document.getElementById("vencedor");
-
-        if (vencedor.length > 0) {
-            vencedorDiv.innerHTML = `<h2>🏆 O vencedor ${vencedor.length > 1 ? "foram" : "foi"} ${vencedor.join(" e ")}!</h2>`;
-            startCelebration();
-        } else {
-            vencedorDiv.innerHTML = `<p>A votação ainda não foi encerrada ou nenhum voto foi registrado.</p>`;
-        }
-
-        // Criar gráfico de votos
-        const ctx = document.getElementById('graficoVotos').getContext('2d');
-        new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: Object.keys(votos),
-                datasets: [{
-                    label: 'Votos',
-                    data: Object.values(votos),
-                    backgroundColor: ['#FF5733', '#33FF57', '#3357FF'],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: { y: { beginAtZero: true } }
-            }
-        });
-
-        function startCelebration() {
-            const fireworks = document.getElementById('fireworks');
-            fireworks.innerHTML = "";
-
-            for (let i = 0; i < 20; i++) {
-                const emoji = document.createElement("div");
-                emoji.className = "emoji";
-                emoji.style.left = Math.random() * 100 + "vw";
-                emoji.style.top = "-50px";
-                emoji.textContent = ["🎉", "🎊", "👏", "🎈", "🥳"][Math.floor(Math.random() * 5)];
-                emoji.style.fontSize = `${20 + Math.random() * 30}px`;
-                emoji.style.animationDuration = `${2 + Math.random() * 3}s`;
-                fireworks.appendChild(emoji);
-            }
-
-            const music = document.getElementById('victoryMusic');
-            music.currentTime = 0;
-            music.play().catch(() => {});
-
-            setTimeout(() => {
-                fireworks.innerHTML = "";
-                music.pause();
-            }, 6000);
-        }
-    </script>
+    <canvas id="graficoVotos" width="400" height="200"></canvas>
+    <div id="fireworks"></div>
+    <script src="resultado.js"></script>
 </body>
 </html>
