--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Votação Representante de Turma</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <h1>Escola Municipal Ignácio de Andrade Melo</h1>
@@ -20,10 +19,16 @@
         <button type="button" onclick="showWinner()">🏆 Mostrar Resultado</button>
         <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
         <button type="button" onclick="resetVote()">🔄 Reiniciar Votação</button>
+        
+        <div id="resultados">
+            <h3>Resultados:</h3>
+            <ul id="listaResultados" style="list-style: none; padding: 0;"></ul>
+        </div>
+        
+        <div id="vencedor"></div>
     </div>
 
     <audio id="voteSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_49ab2502b2.mp3?filename=brazilian-electronic-voting-sound-108212.mp3"></audio>
-
     <script src="script.js" defer></script>
 </body>
 </html>
