--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>🏫 Escola Municipal Ignácio de Andrade Melo</h1>
-    <h2>🗳️ Votação para Representante e Vice</h2>
+    <h1> Escola Municipal Ignácio de Andrade Melo</h1>
+    <h2> Votação para Representante e Vice</h2>
     <div class="container">
         <p>Escolha sua chapa:</p>
         <form id="voteForm">
