--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📢 Escola Municipal Ignácio de Andrade Melo</h1>
+        <h1> Escola Municipal Ignácio de Andrade Melo</h1>
         <h2>🗳️ Votação para Representante e Vice</h2>
 
         <p>Escolha sua chapa:</p>
@@ -18,7 +18,7 @@
         </form>
 
         <div class="botoes">
-            <button type="button" onclick="showWinner()">🏆 Mostrar Resultado</button>
+            <button type="button" onclick="window.location.href='resultado.html'">🏆 Mostrar Resultado</button>
             <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
             <button type="button" onclick="resetVote()">🔄 Reiniciar Votação</button>
         </div>
