--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1> Escola Municipal Ignácio de Andrade Melo</h1>
+        <h1> Escola Municipal Ignácio de Andrade Melo - <span id="sala">SALA 601</span></h1>
         <h2>🗳️ Votação para Representante e Vice</h2>
+
+        <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
         <p>Escolha sua chapa:</p>
         <form id="voteForm">
             <div class="lista-chapas" id="listaCandidatos"></div>
-            <button type="button" onclick="confirmVote()">✅ Confirmar Voto</button>
+            <button type="button" class="botao-confirmar" onclick="confirmVote()">✅ Confirmar Voto</button>
         </form>
 
         <div class="botoes">
