--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
-        <p>Escolha sua chapa:</p><p></p>
+        <p class="escolha-chapa">Escolha sua chapa:</p> <!-- Espaçamento corrigido -->
+
         <form id="voteForm">
             <div class="lista-chapas" id="listaCandidatos"></div>
             <button type="button" class="botao-confirmar" onclick="confirmVote()">✅ Confirmar Voto</button>
