--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
-        <p class="escolha-chapa">Escolha sua chapa:</p> <!-- Espaçamento corrigido -->
+        <p class="escolha-chapa">Escolha sua chapa:</p> 
 
         <form id="voteForm">
             <div class="lista-chapas" id="listaCandidatos"></div>
@@ -21,7 +21,7 @@
         </form>
 
         <div class="botoes">
-            <button type="button" onclick="window.location.href='resultado.html'">🏆 Mostrar Resultado</button>
+            <button type="button" onclick="verificarSenha()">🏆 Mostrar Resultado</button>
             <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
             <button type="button" onclick="resetVote()">🔄 Reiniciar Votação</button>
         </div>
