--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Votação Representante de Turma</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- Biblioteca para senha oculta -->
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
 
         <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
-        <p class="escolha-chapa">Escolha sua chapa:</p> 
+        <p class="escolha-chapa">Escolha sua chapa:</p>
 
         <form id="voteForm">
             <div class="lista-chapas" id="listaCandidatos"></div>
@@ -21,9 +22,9 @@
         </form>
 
         <div class="botoes">
-            <button type="button" onclick="verificarSenha()">🏆 Mostrar Resultado</button>
-            <button type="button" onclick="endVote()">🔒 Encerrar Votação</button>
-            <button type="button" onclick="resetVote()">🔄 Reiniciar Votação</button>
+            <button type="button" onclick="verificarSenha('resultado')">🏆 Mostrar Resultado</button>
+            <button type="button" onclick="verificarSenha('encerrar')">🔒 Encerrar Votação</button>
+            <button type="button" onclick="verificarSenha('reiniciar')">🔄 Reiniciar Votação</button>
         </div>
     </div>
 
