--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Votação Representante de Turma</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- Biblioteca para senha oculta -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="container">
         <h1>Escola Municipal Ignácio de Andrade Melo - <span id="sala">SALA 601</span></h1>
-        <h2>🗳️ Votação para Representante e Vice</h2>
+        <h2> Votação para Representante e Vice</h2>
 
         <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
         <p class="escolha-chapa">Escolha sua chapa:</p>
 
         <form id="voteForm">
+            <input type="text" id="voterName" placeholder="Digite seu nome" required />
             <div class="lista-chapas" id="listaCandidatos"></div>
             <button type="button" class="botao-confirmar" onclick="confirmVote()">✅ Confirmar Voto</button>
         </form>
