--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Votação Representante de Turma</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="container">
         <h1>Escola Municipal Ignácio de Andrade Melo - <span id="sala">SALA 601</span></h1>
-        <h2> Votação para Representante e Vice</h2>
+        <h2>🗳️ Votação para Representante e Vice</h2>
 
         <p class="mensagem-voto">💡 Vote consciente! Sua escolha faz a diferença no futuro da sala.</p>
 
